# microservices

./: .editorconfig  .gitignore  .python-version  LICENSE  MANIFEST.in  README.md  setup.py  setup.sh  tox.ini
users/: .dockerignore  .env  Dockerfile  Makefile  README.md  __init__.py  app.py  behave.ini  config.py  context.py  db.py  microservice-example.org+4-key.pem  microservice-example.org+4.pem  package.json  pylintrc-local  pyproject.toml  requirements-dev.txt  requirements.txt  security.py  setup.py  test_app.py
users/common/: __main__.py
users/deploy/docker/: Dockerfile  docker-compose-mysql.yml  docker-compose-postgres.yml  docker-compose-sqlite.yml  requirements.txt
users/deploy/infrastructure/: README.md  cloudinit.tf  instance.tf  output.tf  securitygroup.tf  terraform.tfstate  terraform.tfstate.backup  vars.tf  vpc.tf
users/deploy/infrastructure/scripts/: init.cfg  setup.sh
users/deploy/kubernetes/: db-claim-persistentvolumeclaim.yaml  db-deployment.yaml  db-service.yaml  users-deployment.yaml  users-hpa.yaml  users-service.yaml
users/dtos/: __init__.py  user.py
users/instance/: None  __init__.py  config.py  index.html
users/models/: manage.py  user.py
users/resources/: __init__.py  base.py  user.py
users/swagger/: __init__.py
users/swagger/schemas/: user.py
users/tests/: base.py  config.py
users/tests/bdd/: README.md
users/tests/bdd/features/: environment.py  health.feature  (+1 more)
users/tests/integration/: user_test.py
users/tests/postman/: Microservices.postman_environment.json  Users.postman_collection.json  package.json
(+3 files in other folders)
