[tool.poetry]
name = "users"
version = "0.1.0"
description = ""
authors = ["Mariano Abdala <marianoabdala@gmail.com>"]
license = "Apache License"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
Flask-BasicAuth = "^0.2.0"
Flask-Cors = "^3.0.10"
Flask-JWT = "^0.3.2"
Flask-RESTful = "^0.3.9"
Flask-SQLAlchemy = "^2.5.1"
gunicorn = "^20.1.0"
psutil = "^5.8.0"
python-dotenv = "^0.19.0"
flask-restful-swagger-2 = "^0.35"

[tool.poetry.dev-dependencies]
allure-behave = "^2.9.43"
behave = "^1.2.6"
coverage = "^5.5"
pytest-cov = "^2.12.1"
pytest = "^6.2.4"
tox = "^3.24.3"
pylint = "^2.10.2"
sure = "^2.0.0"
pytest-html = "^3.1.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
